<resources>
    <string name="app_name">MiCRM</string>

    <string name="home">Inicio</string>
    <string name="activities">Actividades</string>
    <string name="people">Personas</string>
    <string name="business">Negocio</string>
    <string name="institution">Organización</string>
    <string name="ok">Confirmar</string>

    <string name="name">Nombre</string>
    <string name="address">Dirección</string>
    <string name="phone">Teléfono</string>
    <string name="mail">Email</string>

    <string name="title">Título</string>
    <string name="description">Descripción</string>
    <string name="organization">Organización</string>
    <string name="person">Persona</string>
    <string name="value">Valor</string>
    <string name="due_date">Fecha de Cierre</string>
    <string name="date">Fecha</string>
    <string name="time">Hora</string>
    <string name="state">Estado</string>

    <string name="type">Tipo</string>
    <string name="add_business">Agregar Negocio</string>
    <string name="add_activity">Agregar Actividad</string>
    <string name="add_person">Agregar Persona</string>
    <string name="add_organization">Agregar Organización</string>

    <string name="activity_saved">Actividad guardada con éxito</string>
    <string name="business_saved">Negocio guardado con éxito</string>
    <string name="person_saved">Persona guardada con éxito</string>
    <string name="organization_saved">Organización guardada con éxito</string>

    <string name="cancel">Cancelar</string>
    <string name="field_not_null">El campo no puede estar vacío</string>
    <string name="invalid_email">Email Inválido</string>
    <string name="invalid_time">Tiempo Inválido</string>
    <string name="invalid_date">Fecha Invalida</string>
    <string name="want_to_create">¿Quieres agregar un elemento?</string>
    <string name="are_you_sure">¿Estás seguro de realizar esta acción?</string>

    <string name="save_failed">Error al Guardar</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="invalid_phone">Teléfono no válido</string>
    <string name="inform">Informar</string>
</resources>
