<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/icon_people"
            android:title="@string/people" />
        <item
            android:id="@+id/nav_institution"
            android:icon="@drawable/icon_institution"
            android:title="@string/institution" />
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/icon_business"
            android:title="@string/business" />
        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/icon_activities"
            android:title="@string/activities" />
    </group>
</menu>
